# cairn

./: .gitignore  AGENT-BOOTSTRAP.md  ARCHITECTURE.md  CLAUDE.md  QUICKSTART-standalone.md  QUICKSTART-with-server.md  QUICKSTART.md  README.md  USER_STORIES.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: group-deployment.md  index.html  open-questions.md  overview.html  scenario-many-users-one-cairn.html  scenario-one-user-many-cairns.html  splash.html
docs/decisions/: 0001-yaml-library-choice.md  0002-git-library-choice.md  0003-template-engine-choice.md  0004-id-and-timestamp-conventions.md  0005-cross-repo-skills.md  0006-cairn-discovery-and-pairing.md  0009-mcp-server-design.md  0011-multi-author-attribution.md  0012-mcp-http-transport.md
src/cairn/: __init__.py  cairn_toml.py  credentials.py  errors.py  git_ops.py  ids.py  paths.py  project_md.py  registry.py
src/cairn/cli/: __init__.py  _common.py  action_cmd.py  app.py  branch_cmd.py  collaborator_cmd.py  decision_cmd.py  exploration_cmd.py  finding_cmd.py  init_cmd.py  link_cmd.py  mcp_cmd.py  register_cmd.py  status_cmd.py  validate_cmd.py
src/cairn/io/: __init__.py  state_io.py  yaml_io.py
src/cairn/mcp/: remote.py  server.py
src/cairn/schemas/: __init__.py  actions.py  collaborators.py  common.py  decisions.py  findings.py  goals.py  questions.py  state.py
src/cairn/status/: __init__.py  render.py  snapshot.py
src/cairn/template/: __init__.py  render.py
src/cairn/templates/default/{{cookiecutter.project_name}}/: PROJECT.md  TRACKING.md
src/cairn/validate/: __init__.py  checks.py  report.py  runner.py
templates/default/: cookiecutter.json
templates/default/{{cookiecutter.project_name}}/: .gitignore  PROJECT.md  README.md
templates/default/{{cookiecutter.project_name}}/branches/: README.md
templates/default/{{cookiecutter.project_name}}/skills/resolve-branch/: SKILL.md
templates/default/{{cookiecutter.project_name}}/skills/start-branch/: SKILL.md
tests/: conftest.py  test_cairn_toml.py  test_git_identity.py  test_ids.py  test_link_and_register_cli.py  test_mcp_tools.py  test_multi_user_multi_cairn_fixes.py  test_project_md.py  test_registry.py  test_schemas.py  test_us_a_02_finding.py  test_us_a_03_branch.py  test_us_a_03_exploration.py  test_us_a_04_action.py  test_us_a_09_branch_close.py  test_us_a_09_exploration_close.py  test_us_p_01_init.py  test_us_p_02_init_template.py  test_us_p_03_collaborator_add.py  test_us_p_04_decision_add.py  test_us_p_05_validate.py  test_us_p_06_status.py  test_us_p_11_12_13_http.py  test_xrefs.py  test_yaml_roundtrip.py
tests/agent_smoke/multi-user-multi-cairn/runs/20260523T175633Z/: SYNTHESIS.md  scenario-1-kyle-coral-bleach.md  scenario-1-kyle-lit-monitor.md
tests/agent_smoke/multi-user-multi-cairn/runs/20260523T191531Z/: SYNTHESIS.md  scenario-1-kyle-coral-bleach.md  scenario-1-kyle-lit-monitor.md
tests/agent_smoke/multi-user-multi-cairn/runs/20260523T192455Z/: SYNTHESIS.md  scenario-2-alex.md  scenario-2-morgan.md  scenario-2-sam.md
(+8 files in other folders)
