[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cairn"
dynamic = ["version"]
description = "Tooling and design standard for hybrid human/AI research collaboration"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Cairn contributors" }]
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "pyyaml>=6.0",
  "ruamel.yaml>=0.18",
  "gitpython>=3.1",
  "jinja2>=3.1",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
]
cookiecutter = ["cookiecutter>=2.6"]

[project.scripts]
cairn = "cairn.cli.app:app"

[tool.hatch.version]
# Derive the version from git state via hatch-vcs. Tagged commits get a clean
# version (e.g., '0.2.0'); untagged commits get a PEP 440 dev version that
# embeds the commit count + SHA (e.g., '0.1.0.dev28+g0b9c97f'). This makes
# every git state produce a unique wheel version, so `pipx upgrade` and
# `pip install --upgrade` from a git URL actually detect new commits rather
# than short-circuiting on matching static metadata.
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
# Write the resolved version into the package so __init__.py can re-export it.
version-file = "src/cairn/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "QUICKSTART.md", "AGENT-BOOTSTRAP.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/cairn/_version.py"]  # generated by hatch-vcs at build time

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/cairn/cli/*.py" = ["B008"]  # typer.Option() in defaults is idiomatic

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
